00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  labels:
    name: develop
    module: Namespace
