02-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka1
  namespace: develop
  labels:
    name: kafka1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kafka1
  template:
    metadata:
      labels:
        name: kafka1
    spec:
      containers:
      - name: kafka1
        image: wurstmeister/kafka
        imagePullPolicy: Always
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 300
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 30
          failureThreshold: 5
        ports:
        - containerPort: 9092
          name: kafka9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka2
  namespace: develop
  labels:
    name: kafka2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kafka2
  template:
    metadata:
      labels:
        name: kafka2
    spec:
      containers:
      - name: kafka2
        image: wurstmeister/kafka
        imagePullPolicy: Always
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 300
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 30
          failureThreshold: 5
        ports:
        - containerPort: 9092
          name: kafka9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka3
  namespace: develop
  labels:
    name: kafka3
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kafka3
  template:
    metadata:
      labels:
        name: kafka3
    spec:
      containers:
      - name: kafka3
        image: wurstmeister/kafka
        imagePullPolicy: Always
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 500m
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 300
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 30
          failureThreshold: 5
        ports:
        - containerPort: 9092
          name: kafka9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka1
  namespace: develop
  labels:
    name: kafka1
spec:
  selector:
    name: kafka1
  ports:
  - name: kafka9092
    port: 9092
    protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: kafka2
  namespace: develop
  labels:
    name: kafka2
spec:
  selector:
    name: kafka2
  ports:
  - name: kafka9092
    port: 9092
    protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: kafka3
  namespace: develop
  labels:
    name: kafka3
spec:
  selector:
    name: kafka3
  ports:
  - name: kafka9092
    port: 9092
    protocol: TCP
  clusterIP: None
