07-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: develop
  labels:
    name: ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8080
